Some folder refactoring
